# telegram-news-classifier

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  messages.db  news_classifier.session  pyproject.toml  requirements.txt
bot/: classifier.py  config.py  db.py  example_config.yaml  loader.py  logger.py  logging_config.py  main.py  preprocess.py  telegram_bot.py  text_similarity.py
config/: example_config.yaml
data/: README.md  README_ru.md
data/raw/: 1001000724666_messages.json  1001003313758_messages.json  1001003921752_messages.json  1001032086354_messages.json  1001039626561_messages.json  1001044298783_messages.json  1001100158992_messages.json  1001101170442_messages.json  1001117628569_messages.json  1001125816841_messages.json  1001136626166_messages.json  1001138587070_messages.json  1001166834860_messages.json  1001237513492_messages.json  1001259695380_messages.json  1001288481277_messages.json  1001288489154_messages.json  1001326203371_messages.json  1001394050290_messages.json  1001465826763_messages.json  1001699803165_messages.json  1001747110091_messages.json  1001754252633_messages.json  1001966291562_messages.json
notebooks/: category_analysis_from_json.ipynb  data_classification.ipynb  data_classification_ollama.ipynb  json_to_csv_processor.ipynb  model.ipynb
utils/: README.md  telegram_message_exporter.py
